--- a/MoppApp/MoppApp/ContainerCell.xib
+++ b/MoppApp/MoppApp/ContainerCell.xib
@@ -10,25 +10,22 @@
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContainerCell" rowHeight="51" id="WoM-pm-RCS" customClass="ContainerCell">
             <rect key="frame" x="0.0" y="0.0" width="375" height="51"/>
             <autoresizingMask key="autoresizingMask"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="WoM-pm-RCS" id="dCz-He-kwN">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WoM-pm-RCS" id="dCz-He-kwN">
                 <frame key="frameInset" width="375" height="50"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="digidoc" translatesAutoresizingMaskIntoConstraints="NO" id="6xd-r9-0tl">
-                        <frame key="frameInset" width="1000" height="1000"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="digidoc" translatesAutoresizingMaskIntoConstraints="NO" id="6xd-r9-0tl">
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="IJp-lg-NuY"/>
                             <constraint firstAttribute="height" constant="30" id="iHu-A2-9TP"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="titleLabel asdf asdf klsdflk aseflkaseflk asefk aseflk aseflk aseflk asef" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jXJ-17-mpS">
-                        <frame key="frameInset" width="1000" height="1000"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titleLabel asdf asdf klsdflk aseflkaseflk asefk aseflk aseflk aseflk asef" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jXJ-17-mpS">
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" ambiguous="YES" misplaced="YES" text="dateLabel test ss" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Plv-LP-fDV">
-                        <frame key="frameInset" width="1000" height="1000"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="dateLabel test ss" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Plv-LP-fDV">
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -37,12 +34,12 @@
                 <constraints>
                     <constraint firstItem="Plv-LP-fDV" firstAttribute="leading" secondItem="jXJ-17-mpS" secondAttribute="trailing" constant="5" id="4mr-ET-WZ5"/>
                     <constraint firstAttribute="trailing" secondItem="Plv-LP-fDV" secondAttribute="trailing" constant="10" id="6Fe-Hs-Kgn"/>
-                    <constraint firstItem="jXJ-17-mpS" firstAttribute="centerY" secondItem="6xd-r9-0tl" secondAttribute="centerY" id="6hT-IS-p80"/>
+                    <constraint firstItem="Plv-LP-fDV" firstAttribute="centerY" secondItem="dCz-He-kwN" secondAttribute="centerY" id="9jp-bd-IoS"/>
                     <constraint firstItem="6xd-r9-0tl" firstAttribute="top" secondItem="dCz-He-kwN" secondAttribute="top" constant="10" id="C77-TU-iMv"/>
-                    <constraint firstItem="Plv-LP-fDV" firstAttribute="centerY" secondItem="6xd-r9-0tl" secondAttribute="centerY" id="CXW-bf-xeQ"/>
                     <constraint firstItem="6xd-r9-0tl" firstAttribute="leading" secondItem="dCz-He-kwN" secondAttribute="leading" constant="10" id="Ou9-Yo-w1e"/>
                     <constraint firstItem="jXJ-17-mpS" firstAttribute="leading" secondItem="6xd-r9-0tl" secondAttribute="trailing" constant="10" id="VrZ-et-8Yy"/>
-                    <constraint firstAttribute="bottom" secondItem="6xd-r9-0tl" secondAttribute="bottom" constant="10" id="XLC-pi-ftz"/>
+                    <constraint firstItem="jXJ-17-mpS" firstAttribute="centerY" secondItem="dCz-He-kwN" secondAttribute="centerY" id="j3A-ki-SCw"/>
+                    <constraint firstAttribute="bottom" secondItem="6xd-r9-0tl" secondAttribute="bottom" constant="10" id="uC2-9G-KOE"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -50,7 +47,7 @@
                 <outlet property="iconImageView" destination="6xd-r9-0tl" id="2Nd-8w-BPc"/>
                 <outlet property="titleLabel" destination="jXJ-17-mpS" id="dCM-bv-uuG"/>
             </connections>
-            <point key="canvasLocation" x="-57" y="-312"/>
+            <point key="canvasLocation" x="-1324" y="-1170"/>
         </tableViewCell>
     </objects>
     <resources>
